appId: com.zaimimran.almari
# UC-F11-11
---
- runFlow: ../lib/sample-closet.yaml
- tapOn:
    id: "header-profile"
- assertVisible:
    id: "profile"
- scrollUntilVisible:
    element:
      id: "profile-morning"
- tapOn:
    id: "profile-morning"
- tapOn:
    id: "morning-on-toggle"
- tapOn:
    id: "morning-weekdays-toggle"
- tapOn:
    id: "profile-morning"
- assertVisible: ".*07:00.*"
- tapOn:
    id: "profile-morning"
- tapOn:
    id: "morning-on-toggle"
- assertNotVisible:
    id: "morning-weekdays"
