appId: com.zaimimran.almari
# UC-F06-20
---
- runFlow: ../lib/sample-closet.yaml
- tapOn:
    id: "today-like"
- extendedWaitUntil:
    visible:
      id: "today-like-on"
    timeout: 10000
- tapOn:
    id: "today-like-on"
- extendedWaitUntil:
    visible:
      id: "today-like"
    timeout: 10000
- tapOn:
    id: "today-like"
- extendedWaitUntil:
    visible:
      id: "today-like-on"
    timeout: 10000
- tapOn:
    id: "today-not-for-me"
- assertVisible: "Too formal.*"
- tapOn: "Too formal.*"
- extendedWaitUntil:
    notVisible:
      id: "today-like-on"
    timeout: 10000
- extendedWaitUntil:
    visible:
      id: "today-like"
    timeout: 60000
- assertNotVisible:
    id: "today-like-on"
